# leica_point_cloud_processing

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  catkin.options  dependencies.rosinstall  package.xml  rosdoc.yaml  wiki.md
doc/: manifest.yaml
doc/html/: BooleanDifference_8cpp.html  BooleanDifference_8cpp__incl.map  BooleanDifference_8cpp__incl.md5  BooleanDifference_8cpp_source.html  BooleanDifference_8h.html  BooleanDifference_8h__dep__incl.map  BooleanDifference_8h__dep__incl.md5  BooleanDifference_8h__incl.map  BooleanDifference_8h__incl.md5  BooleanDifference_8h_source.html  CADToPointCloud_8cpp.html  CADToPointCloud_8cpp__incl.map  CADToPointCloud_8cpp__incl.md5  CADToPointCloud_8cpp_source.html  CADToPointCloud_8h.html  CADToPointCloud_8h__dep__incl.map  CADToPointCloud_8h__dep__incl.md5  CADToPointCloud_8h__incl.map  CADToPointCloud_8h__incl.md5  CADToPointCloud_8h_source.html  FODDetector_8cpp.html  FODDetector_8cpp__incl.map  FODDetector_8cpp__incl.md5  FODDetector_8cpp_source.html  FODDetector_8h.html  FODDetector_8h__dep__incl.map  FODDetector_8h__dep__incl.md5  FODDetector_8h__incl.map  FODDetector_8h__incl.md5  FODDetector_8h_source.html  Filter_8cpp.html  Filter_8cpp__incl.map  Filter_8cpp__incl.md5  Filter_8cpp_source.html  Filter_8h.html  Filter_8h__dep__incl.map  Filter_8h__dep__incl.md5  Filter_8h__incl.map  Filter_8h__incl.md5  Filter_8h_source.html  (+81 more)
include/: BooleanDifference.h  CADToPointCloud.h  FODDetector.h  Filter.h  GICPAlignment.h  InitialAlignment.h  LeicaStateMachine.h  Utils.h  Viewer.h  boolean_difference.h  cad_to_pointcloud.h  filter.h  fod_detector.h  gicp_alignment.h  initial_alignment.h  utils.h  viewer.h
launch/: align.launch  c5_system_spawn.launch  clustering.launch  filter_clouds.launch  laserscan_to_pointcloud.launch  leica_point_cloud_processing.launch  node.launch  system_spawn.launch
rviz/: point_cloud.rviz
scripts/: downsample_pc.py  floor_filter.py  laserscan_to_pointcloud.py  load_pc.py  move_c5_tilt.py  pts_2_pcd.py  ptx_2_pcd.py  publish_tf.py  segment_and_publish_pcs.py  segment_pc.py
scripts/ejercicios_tutorial_google/: clasificacion_mnist.py  ejercicio_youtube  ejercicio_youtube.ipynb  first_steps_to_tensorflow.py  introduction_to_neural_network.py  model_validation.py  pandas_tutorial.py
src/: 3dscan_to_cad_align.cpp  BooleanDifference.cpp  CADToPointCloud.cpp  FODDetector.cpp  Filter.cpp  GICPAlignment.cpp  InitialAlignment.cpp  LeicaStateMachine.cpp  Utils.cpp  Viewer.cpp  boolean_difference.cpp  cad_to_pointcloud.cpp  cloud_to_mesh.cpp  differentiate_point_clouds.cpp  filter.cpp  filter_cloud.cpp  filter_scan_floor.cpp  filter_scan_noise.cpp  fod_detector.cpp  gicp_alignment.cpp  initial_alignment.cpp  input_cloud.cpp  laserscan_to_pointcloud.cpp  load_and_publish_clouds.cpp  node.cpp  publish_cloud.cpp  utils.cpp  viewer.cpp
test/: test_cad_to_pointcloud.cpp  test_filter.cpp  test_fod_detector.cpp  test_gicp_alignment.cpp  test_initial_alignment.cpp  test_publish_clouds.cpp  test_publish_clouds.test  test_state_machine.cpp  test_state_machine.test  test_utils.cpp
urdf/: assembly.xacro  assembly_big.xacro  c5.urdf.xacro  camera.urdf.xacro  camera.xacro  stringer.xacro
worlds/: base.world
