<?xml version="1.0"?>
<package format="2">
  <name>leica_scanstation</name>
  <version>0.0.0</version>
  <description>The ROSIN LEICASS package</description>

  <maintainer email="imlara@catec.aero">ines</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>pcl</build_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>pcl</exec_depend> -->

  <export>
  </export>
</package>
